# Unreal2004

./: 0 UT2 Code.vcproj  0 UT2 Code.vcxproj  BuildFileList.txt  Sync to Latest.lnk  UT2 Code.sln  UpgradeLog.XML  UpgradeLog2.XML  d2u.pl  fixit  makefile  makefile-general  makefile-header  readme.md  todo.txt  ucc.sh  ut2004.sh
ALAudio/Inc/: ALAudio.h  ALAudioCapture.h  ALAudioStream.h  ALAudioSubsystem.h  ALAudioVoice.h  ALFuncs.h
ALAudio/MP3/: datatbl.h  math_a.asm  mp3api.cpp  mp3dec.cpp  mp3dec.h  mss.h
ALAudio/Src/: ALAudio.cpp  ALAudio.vcproj  ALAudio.vcxproj  ALAudio.vcxproj.filters  ALAudioCapture.cpp  ALAudioEAXTools.cpp  ALAudioStream.cpp  ALAudioSubsystem.cpp  ALAudioVoice.cpp  makefile
AutoRun/: AutoRun.cpp  AutoRun.sln  AutoRun.vcproj
BonusPack/: BonusPack.vcproj  BonusPack.vcxproj  BonusPack.vcxproj.filters
Fonts/: ImportFonts.exec.txt  ImportFonts.kot.exec.txt  ImportFonts.smt.exec.txt  ImportFonts.tmt.exec.txt
ForceFeedback/: gamepad.ifr  ifeel.ifr  joystick.ifr  other.ifr
GUI2K4/: GUI2K4.vcproj  GUI2K4.vcxproj  GUI2K4.vcxproj.filters
GUIDesigner/: Debug.idb  GUIDesigner.vcproj  GUIDesigner.vcxproj  GUIDesigner.vcxproj.filters
Help/: BonusPackReadme.txt  README-DEMO.DET.TXT  README-DEMO.EST.TXT  README-DEMO.FRT.TXT  README-DEMO.INT.TXT  README-DEMO.ITT.TXT  README.DET.TXT  README.EST.TXT  README.FRT.TXT  README.INT.TXT  README.ITT.TXT  README.KOT.TXT  README.SMT.TXT  README.TMT.TXT  ReadMe.htm  SAPI-EULA.txt
KarmaData/: Skaarj.ka  UT2.kaw
Maps/: Auto7.ut2  Auto8.ut2  Auto9.ut2
Onslaught/: Onslaught.vcproj  Onslaught.vcxproj  Onslaught.vcxproj.filters
OnslaughtFull/: OnslaughtFull.vcproj  OnslaughtFull.vcxproj  OnslaughtFull.vcxproj.filters
Saves/: SP_Jakob.uvx
SkaarjPack_rc/: SkaarjPack_rc.vcproj  SkaarjPack_rc.vcxproj  SkaarjPack_rc.vcxproj.filters
Speech/: br.xml  ctf.xml  dom.xml  ons.xml  tdm.xml
System/: ALAudio.kot  AS-Convoy.kot  AS-FallenCity.int  AS-FallenCity.kot  AS-Glacier.kot  AS-MotherShip.int  AS-RobotFactory.int  AutoRunNull.inf  BR-BridgeOfFate.int  CTF-DE-LavaGiant2.int  CTF-DoubleDammage.int  CTF-January.est  CTF-January.kot  CacheRecords.ucl  CompareLang.bat  Core.det  Core.kot  D3DDrv.kot  D3DDrv.smt  D3DDrv.tmt  DM-1on1-Squader.int  DM-1on1-Squader.kot  DefUnrealEd.ini  DefUser.ini  DefUserXbox.ini  Default.ini  DefaultXbox.ini  DemoReadme.txt  Editor.int  Engine.det  Engine.est  Engine.frt  Engine.int  Engine.itt  GUI2K4.det  GUI2K4.est  GUI2K4.frt  GUI2K4.int  GUI2K4.itt  GUI2K4.kot  (+118 more)
UT2k4Assault/: UT2k4Assault.vcproj  UT2k4Assault.vcxproj  UT2k4Assault.vcxproj.filters
UT2k4AssaultFull/: UT2k4AssaultFull.vcproj  UT2k4AssaultFull.vcxproj  UT2k4AssaultFull.vcxproj.filters
UTClassic/: UTClassic.vcproj  UTClassic.vcxproj  UTClassic.vcxproj.filters
UccDepend/: UccDepend.vcproj  UccDepend.vcxproj  UccDepend.vcxproj.filters
Vehicles/: Vehicles.vcproj  Vehicles.vcxproj  Vehicles.vcxproj.filters
XAdmin/: XAdmin.vcproj  XAdmin.vcxproj  XAdmin.vcxproj.filters
XGame/: XGame.vcproj  XGame.vcxproj  XGame.vcxproj.filters
XGame_rc/: XGame_rc.vcproj  XGame_rc.vcxproj  XGame_rc.vcxproj.filters
XInterface/: XInterface.vcproj  XInterface.vcxproj  XInterface.vcxproj.filters
XPickups/: XPickups.vcproj  XPickups.vcxproj  XPickups.vcxproj.filters
XPickups_rc/: XPickups_rc.vcproj  XPickups_rc.vcxproj  XPickups_rc.vcxproj.filters
XWeapons/: XWeapons.vcproj  XWeapons.vcxproj  XWeapons.vcxproj.filters
XWeapons_rc/: XWeapons_rc.vcproj  XWeapons_rc.vcxproj  XWeapons_rc.vcxproj.filters
guires/: BonusPack.u  GUI2K4.u  NewVehicles.u  OggPlayer.u  Onslaught.u  SampleSkin.u  SkaarjPack.u  UT2k4Assault.u  UTClassic.u  xVoting.u
karma/: README_UNREAL.txt
karma/Mcd/examples/: configure  configure.in  makefile  makefile.common.in  makefile.lib
karma/Mcd/examples/BoxOnBox/: BoxOnBox.dsp  cdBoxOnBox.c  makefile
karma/Mcd/examples/ConeAndFriction/: ConeAndFriction.c  ConeAndFriction.dsp
karma/Mcd/examples/LoadPfb/: LoadPfb.cpp  makefile
karma/Mcd/examples/Mesh4Bars/: Mesh4Bars.c  Mesh4Bars.dsp  makefile
karma/Mcd/examples/MeshMesh/: MeshMesh.dsp  MeshTest.c  makefile
karma/Mcd/examples/MeshSgiLogoSpin/: MeshSgiLogoSpin.c  MeshSgiLogoSpin.dsp  makefile
karma/Mcd/examples/Rw/demo/democom/: camera.c  camera.h  padmap.c  padmap.h
karma/Mcd/examples/Rw/demo/dice/: dice.dsp  dice.dsw  makefile
karma/Mcd/examples/Rw/demo/dice/models/: dicetabl.bsp  die.dff  wheel.dff
karma/Mcd/examples/Rw/demo/dice/src/: dice.c  prefix.h
karma/Mcd/examples/Rw/demo/dice/textures/: die1.PVR  die2.PVR  die3.PVR  die4.PVR  die5.PVR  die6.PVR  felt2.PVR  shadow.pvr  wood2.PVR
karma/Mcd/examples/Rw/skel/: events.h  metrics.c  metrics.h  mouse.c  mouse.h  mousedat.h  platform.h  skeleton.c  skeleton.h  terminal.c  terminal.h  vecfont.c  vecfont.h
karma/Mcd/examples/Rw/skel/platform/: win.c  win.rc
karma/Mcd/examples/alone/: alone.dsp  cdAlone.cpp  makefile  plmakefile.pl
karma/Mcd/examples/chair/: chair.c  makefile
karma/Mcd/examples/dominoes/: cdDominoes.c  dominoes.dsp  makefile
karma/Mcd/examples/fast/: fast.cpp  fast.dsp  makefile
karma/Mcd/examples/include/: McduMeshSphere.h
karma/Mcd/examples/lineseg/: DistMeshMesh.c  cdLineseg.c  lineseg.dsp  makefile
karma/Mcd/examples/nfBench/: makefile  nfBench.cpp  nfBench.dsp
karma/Mcd/examples/restitution/: Restitution.cpp  makefile  restitution.dsp
karma/Mcd/examples/rgHeightField/: makefile  rgHeightField.c  rgHeightField.dsp  trilist.c
karma/Mcd/examples/test/: McdIntersect.t.cpp  McdSpace.t.cpp  McdTest.h  makefile  test.cpp
karma/Mcd/examples/trilist/: TriList.dsp  makefile  trianglelist.cpp
karma/Mcd/examples/vis/: makefile  vis.cpp  vis.dsp  vispoints.cpp
skaarjpack/: SkaarjPack.vcproj  SkaarjPack.vcxproj  SkaarjPack.vcxproj.filters
xVoting/: xVoting.vcproj  xVoting.vcxproj  xVoting.vcxproj.filters
zlib/: adler32.c  compress.c  crc32.c  deflate.c  deflate.h  example.c  gzio.c  inftrees.c  makefile  maketree.c  minigzip.c  trees.c  uncompr.c  zconf.h  zlib.vcproj  zlib.vcxproj  zlib.vcxproj.filters  zlibexports.def  zutil.c  zutil.h
(+4872 files in other folders)
